        Reviewed by Martin Robinson.

[GTK] testmimehandling falsely succeeds testing Ogg mime type
        https://bugs.webkit.org/show_bug.cgi?id=45349

        Advertize audio/x-vorbis+ogg so MediaDocuments loading local ogg
        files work as well.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

WebKit/gtk:

        Reviewed by Martin Robinson.

        [GTK] testmimehandling falsely succeeds testing Ogg mime type
        https://bugs.webkit.org/show_bug.cgi?id=45349

        Make this actually test an ogg file request instead of pdf and
        changed the expected result to match libsoup content-sniffing
        result in the case of ogg/vorbis file.

        * tests/testmimehandling.c:
        (mime_type_policy_decision_requested_cb):
        (test_mime_ogg):

Canonical link: https://commits.webkit.org/57830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67086 268f45cc-cd09-0410-ab3c-d52691b4dbfc